--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         <br />
         <div class="font-monospace fs-3" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="1500">
           <p class="pe-4 ">
-            My name is <span class="fw-bold fs-2 my-0">Rizki Ananta</span>, An
-            entry-level Web Developer from Jakarta, Indonesia 🇮🇩.
+            I'm <span class="fw-bold fs-2 my-0">Rizki Ananta</span>,
+            entry-level IT Developer from Jakarta, Indonesia.
           </p>
           <p class="my-0">
             I have a deep passion in software development and through out my
@@ -74,8 +74,8 @@
 
       <div class="col-md-5 home-profile-2 text-center">
         <div class="brighten">
-          <img src="assets/images/profile_pic_v2.png" class="rounded-circle profile-pic my-4" width="300px" height="300px"
-            data-aos="zoom-in" data-aos-duration="2000" />
+          <img src="assets/images/profile_pic_v2.png" class="rounded-circle profile-pic my-4" width="300px"
+            height="300px" data-aos="zoom-in" data-aos-duration="2000" />
 
         </div>
         <div class="mt-1">
@@ -134,6 +134,10 @@
             <li class="list-group-item skill-list border-1 me-2 rounded-5">
               <!-- <i class="fa-brands fa-java"></i> -->
               <span class="fw-semibold">Java</span>
+            </li>
+            <li class="list-group-item skill-list border-1 me-2 rounded-5">
+              <!-- <i class="fa-brands fa-java"></i> -->
+              <span class="fw-semibold">Spring Framework</span>
             </li>
           </ul>
         </div>
@@ -243,12 +247,12 @@
               class="fa-brands fa-instagram fa-lg sosmed-link-color link-underline link-underline-opacity-0"></a>
           </li>
           <li class="list-group-item sosmed-list border-0 rounded-1">
-            <a href="#" target="_blank"
+            <a href="https://www.linkedin.com/in/rizki-ananta/" target="_blank"
               class="fa-brands fa-linkedin fa-lg sosmed-link-color link-underline link-underline-opacity-0">
             </a>
           </li>
           <li class="list-group-item sosmed-list border-0 rounded-1">
-            <a href="#" target="_blank"
+            <a href="https://github.com/rzkananta" target="_blank"
               class="fa-brands fa-github fa-lg sosmed-link-color link-underline link-underline-opacity-0">
             </a>
           </li>
